[gd_scene load_steps=14 format=3 uid="uid://c1nj5wjj0bnap"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ypgd0"]
[ext_resource type="Texture2D" uid="uid://b00wnffb0m68k" path="res://assets/graphics/player.svg" id="2_1e1cj"]
[ext_resource type="AudioStream" uid="uid://dby8guo3iptbu" path="res://assets/sfxr/shot.sfxr" id="3_8ywk4"]
[ext_resource type="AudioStream" uid="uid://bhcqvnm1wckxc" path="res://assets/sfxr/hurt.sfxr" id="4_0iwge"]
[ext_resource type="AudioStream" uid="uid://bnj0a82c6k88i" path="res://assets/sfxr/pickup.sfxr" id="6_yonlr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lvl2"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_7dufg"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgmf3"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_cf0fv"]
radius = 95.021

[sub_resource type="Animation" id="Animation_umysw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8mq1l"]
resource_name = "hurt"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8phmt"]
resource_name = "respawned"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.25098), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2mfbb"]
_data = {
"RESET": SubResource("Animation_umysw"),
"hurt": SubResource("Animation_8mq1l"),
"respawned": SubResource("Animation_8phmt")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_ypgd0")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.25098)
position = Vector2(0, 44)
texture = ExtResource("2_1e1cj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_1e1cj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_3lvl2")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_7dufg")

[node name="Pickuparea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickuparea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_tgmf3")

[node name="PickupPull" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 600.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupPull"]
shape = SubResource("CircleShape2D_cf0fv")

[node name="ShotSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8ywk4")

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0iwge")

[node name="PickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yonlr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2mfbb")
}

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Pickuparea" to="." method="_on_pickuparea_body_entered"]
